<resources>
    <string name="app_name">QuizApp</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="forget_password">Forget Password?</string>
    <string name="only_the_viewers_know">Only the Viewers Know</string>
    <string name="don_t_you_have_an_account">Don\'t you have an account?</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="logo_of_the_app">Logo of the App</string>
    <string name="series_image">Series Image</string>
    <string name="level">Level</string>
    <string name="series">Series</string>
    <string name="quiz">Quiz</string>
    <string name="profile">Profile</string>
    <string name="quiz_results">Quiz Results</string>
    <string name="more">More</string>
    <string name="settings">Settings</string>
    <string name="add_image">Add Image</string>
    <string name="share">Share</string>
    <string name="exit">Log out</string>
    <string name="camera">Camera</string>
    <string name="add_photo">Add Photo</string>
    <string name="gallery">Gallery</string>
    <string name="sort_by_name">Sort by Name</string>
    <string name="sort_by_level">Sort by Level</string>
    <string name="sort_by_movie">Sort by Movie</string>
    <string name="sort_by_series">Sort by Series</string>
    <string name="sort">Sort</string>
    <string name="search">Search</string>
    <string name="imdb_icon">IMDb icon</string>
    <string name="poster_of_image">Poster of image</string>
    <string name="temporary_plot_">After his hometown is destroyed and is traumatized, young Eren Jaeger vows to cleanse the earth of the giant humanoid Titans that have brought humanity to the brink of extinction.</string>
    <string name="start_quiz">Start Quiz</string>


</resources>