<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.RegisterFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/icon"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:cardCornerRadius="40dp"
        app:layout_constraintBottom_toTopOf="@id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/icon"
            android:contentDescription="@string/only_the_viewers_know" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/only_the_viewers_know"
        app:layout_constraintTop_toBottomOf="@id/icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="5dp"
        android:textColor="@color/primary"
        android:textSize="26sp"/>


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icon"
        app:layout_constraintBottom_toBottomOf="parent">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/login_edittext_background"
            android:ems="10"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"
            android:textColor="@color/on_surface_variant"
            android:textSize="18sp"
            android:autofillHints="emailAddress" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/login_edittext_background"
            android:ems="10"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/on_surface_variant"
            android:minLines="6"
            android:maxLines="15"
            android:textSize="18sp"
            android:autofillHints="password" />

        <Button
            android:id="@+id/register_button"
            style="@style/Widget.Rexuses.LoginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/on_primary"
            android:text="@string/register" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>