<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.information.InformationFragment">

    <TextView
        android:id="@+id/title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/year_text_view"
        android:text="Attack On Titan"
        android:textSize="24sp"
        android:textColor="#444343"
        android:textStyle="bold"
        android:layout_margin="10dp"/>
    <TextView
        android:id="@+id/imdb_rating_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/title_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="IMDb Rating"
        android:textSize="20sp"
        android:textColor="@color/gray_color"
        android:textStyle="bold"
        android:layout_margin="5dp"/>
    <ImageView
        android:id="@+id/imdb_icon_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/imdb_rating_text_view"
        app:layout_constraintStart_toStartOf="@id/imdb_rating_text_view"
        android:src="@drawable/ic_imdb"
        android:contentDescription="@string/imdb_icon" />
    <TextView
        android:id="@+id/imdb_input_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/imdb_icon_image_view"
        app:layout_constraintBottom_toBottomOf="@id/imdb_icon_image_view"
        app:layout_constraintStart_toEndOf="@id/imdb_icon_image_view"
        android:text="9.3"
        android:textColor="#444343"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginStart="5dp"/>
    <TextView
        android:id="@+id/imdb_max_score_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/imdb_input_text_view"
        app:layout_constraintBottom_toBottomOf="@id/imdb_input_text_view"
        app:layout_constraintStart_toEndOf="@id/imdb_input_text_view"
        android:text="/10"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginStart="2dp"/>
    <TextView
        android:id="@+id/year_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/title_text_view"
        app:layout_constraintTop_toBottomOf="@id/title_text_view"
        android:text="2013"
        android:textSize="16sp"
        android:textColor="@color/gray_color"
        android:layout_marginStart="2dp"/>
    <TextView
        android:id="@+id/run_time_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/year_text_view"
        app:layout_constraintTop_toBottomOf="@id/title_text_view"
        android:text="180 min"
        android:textSize="16sp"
        android:textColor="@color/gray_color"
        android:layout_marginStart="15dp"/>
    <ImageView
        android:id="@+id/poster_image_view"
        android:layout_width="225dp"
        android:layout_height="350dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imdb_icon_image_view"
        android:src="@color/black"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/poster_of_image" />
    <TextView
        android:id="@+id/genre_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/poster_image_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="Animation, Action, Adventure"
        android:textSize="16sp"
        android:textColor="@color/gray_color"
        android:textStyle="bold"
        android:layout_margin="5dp"/>
    <TextView
        android:id="@+id/plot_text_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/genre_text_view"
        app:layout_constraintBottom_toTopOf="@id/start_quiz_button"
        android:text="@string/temporary_plot_"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_margin="10dp"/>
    <Button
        android:id="@+id/start_quiz_button"
        style="@style/Widget.Rexuses.LoginButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/start_quiz"
        android:layout_margin="20dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>